--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,8 @@
     "redirects": [
       {
         "source": "/:path.html",
-        "destination": "/:path"
+        "destination": "/:path",
+        "permanent":true
       }
     ],
     "rewrites": [
