--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,14 @@
 {
     "redirects": [
       {
+        "source": "/index.html",
+        "destination": "/",
+        "permanent": true
+      },
+      {
         "source": "/:path.html",
         "destination": "/:path",
-        "permanent":true
+        "permanent": true
       }
     ],
     "rewrites": [
